// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with logout button 1`] = `
<ForwardRef(forwardRef)
  itemGutter="half"
  wrap={true}
>
  <Localized
    id="general-userBoxAuthenticated-signedInAs"
    username={<Username />}
  >
    <ForwardRef(forwardRef)
      container="div"
      variant="bodyCopy"
    >
      Signed in as &lt;username&gt;&lt;/username&gt;.
    </ForwardRef(forwardRef)>
  </Localized>
  <Localized
    button={
      <ForwardRef(forwardRef)
        color="primary"
        onClick={[Function]}
        size="small"
        variant="underlined"
      />
    }
    id="general-userBoxAuthenticated-notYou"
  >
    <ForwardRef(forwardRef)
      container={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        }
      }
      variant="bodyCopy"
    >
      Not you? &lt;button&gt;Sign Out&lt;/button&gt;
    </ForwardRef(forwardRef)>
  </Localized>
</ForwardRef(forwardRef)>
`;

exports[`renders correctly without logout button 1`] = `
<ForwardRef(forwardRef)
  itemGutter="half"
  wrap={true}
>
  <Localized
    id="general-userBoxAuthenticated-signedInAs"
    username={<Username />}
  >
    <ForwardRef(forwardRef)
      container="div"
      variant="bodyCopy"
    >
      Signed in as &lt;username&gt;&lt;/username&gt;.
    </ForwardRef(forwardRef)>
  </Localized>
</ForwardRef(forwardRef)>
`;
